logs/Slang/generated/hdlconv/hdlconvertor_p496.sv.log
name: hdlconvertor_p496
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:1:1: error: expected member
checker reason_about_one_bit(bit [63:0] data1, bit [63:0] data2,
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:1:47: error: expected identifier
checker reason_about_one_bit(bit [63:0] data1, bit [63:0] data2,
                                              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:1:48: error: expected declarator
checker reason_about_one_bit(bit [63:0] data1, bit [63:0] data2,
                                               ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:1:58: error: expected ','
checker reason_about_one_bit(bit [63:0] data1, bit [63:0] data2,
                                                         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:1:65: error: expected identifier
checker reason_about_one_bit(bit [63:0] data1, bit [63:0] data2,
                                                                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:2:1: error: expected declarator
event clock);
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:2:6: error: expected ','
event clock);
     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:2:12: error: expected declarator
event clock);
           ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:3:1: error: expected member
rand const bit [5:0] idx;
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:4:1: error: language feature not yet supported
a1: assert property (@clock data1[idx] == data2[idx]);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:5:1: error: expected member
endchecker : reason_about_one_bit
^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:9:41: error: redefinition of 'data1'
checker reason_about_all_bit(bit [63:0] data1, bit [63:0] data2,
                                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:1:41: note: previous definition here
checker reason_about_one_bit(bit [63:0] data1, bit [63:0] data2,
                                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:9:47: error: expected identifier
checker reason_about_all_bit(bit [63:0] data1, bit [63:0] data2,
                                              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:9:48: error: expected declarator
checker reason_about_all_bit(bit [63:0] data1, bit [63:0] data2,
                                               ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:9:58: error: expected ','
checker reason_about_all_bit(bit [63:0] data1, bit [63:0] data2,
                                                         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:9:59: error: redefinition of 'data2'
checker reason_about_all_bit(bit [63:0] data1, bit [63:0] data2,
                                                          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:1:59: note: previous definition here
checker reason_about_one_bit(bit [63:0] data1, bit [63:0] data2,
                                                          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:9:65: error: expected identifier
checker reason_about_all_bit(bit [63:0] data1, bit [63:0] data2,
                                                                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:10:1: error: expected declarator
event clock);
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:10:6: error: expected ','
event clock);
     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:10:7: error: redefinition of 'clock'
event clock);
      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:2:7: note: previous definition here
event clock);
      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:10:12: error: expected declarator
event clock);
           ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:11:1: error: language feature not yet supported
a1: assert property (@clock data1 == data2);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:12:1: error: expected member
endchecker : reason_about_all_bit
^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:19:1: error: expected member
rand const bit [$bits(in_data)-1:0] mem_data;
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:19:23: error: use of undeclared identifier 'in_data'
rand const bit [$bits(in_data)-1:0] mem_data;
                      ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:20:1: error: language feature not yet supported
sequence transaction;
^~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:21:46: error: expected expression
start_ev && (in_data == mem_data) ##1 end_ev[->1];
                                             ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:23:1: error: language feature not yet supported
a1: assert property (@clock transaction |-> out_data == mem_data);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:24:1: error: expected member
endchecker : data_legal
^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:32:1: error: language feature not yet supported
sequence transaction (loc_var);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:33:10: error: expected ')'
(start_ev, loc_var = in_data) ##1 end_ev[->1];
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:33:10: error: expected member
(start_ev, loc_var = in_data) ##1 end_ev[->1];
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:34:1: error: expected member
endsequence
^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:35:1: error: language feature not yet supported
property data_legal;
^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:39:1: error: language feature not yet supported
a1: assert property (@clock data_legal);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p496.sv:40:1: error: expected member
endchecker : data_legal_with_loc
^~~~~~~~~~
